--- a/index.html
+++ b/index.html
@@ -20,11 +20,17 @@
       já antes que seja tarde demais.
     </div>
     <div style="text-align:center">
-          <button id="kiwify-upsell-trigger-YnNgFu8" style="background-color:#1e1e1e;padding:12px 16px;cursor:pointer;color:#FFFFFF;font-weight:600;border-radius:4px;border:1px solid #1e1e1e;font-size:20px;">Sim, eu aceito essa oferta especial!</button>
-          <div id="kiwify-upsell-cancel-trigger" style="margin-top:1rem;cursor:pointer;font-size:16px;text-decoration:underline;font-family:sans-serif;">Não, eu gostaria de recusar essa oferta</div>
-        </div><script> 
-            let nextUpsellURL = "https://m3d-super-oferta-10-arquivos.netlify.app/";
-            let nextDownsellURL = "";</script><script src="https://kiwify-snippets.netlify.app/upsell/upsell.min.js"></script>
+      <button id="kiwify-upsell-trigger-YnNgFu8"
+        style="background-color:#1e1e1e;padding:12px 16px;cursor:pointer;color:#FFFFFF;font-weight:600;border-radius:4px;border:1px solid #1e1e1e;font-size:20px;">Sim,
+        eu aceito essa oferta especial!</button>
+      <div id="kiwify-upsell-cancel-trigger"
+        style="margin-top:1rem;cursor:pointer;font-size:16px;text-decoration:underline;font-family:sans-serif;">Não, eu
+        gostaria de recusar essa oferta</div>
+    </div>
+    <script>
+      let nextUpsellURL = "https://m3d-super-oferta-10-arquivos.netlify.app/";
+      let nextDownsellURL = "";</script>
+    <script src="https://kiwify-snippets.netlify.app/upsell/upsell.min.js"></script>
 
     </div>
   </section>
